# CafeKit

./: CMakeLists.txt  CafeKit.pro  CafeKit.pro.user.3f4e440  CafeKit.pro.user.cfc24b3  about.cpp  about.ui  cafekit (1).sql  database.cpp  database.h  home.cpp  home.h  home.ui  home.ui.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  resources.qrc  usermodel.h
Resources/: resources.qrc
forms/: form.ui
sql/: cafekit.sql
